@@ -4,7 +4,7 @@ import com.github.solairerove.common.Pair;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
 public class QuickSortTest {
 
@@ -12,11 +12,33 @@ public class QuickSortTest {
 
     @Test
     public void quickSortTest() {
-        var pairs = List.of(new Pair(3, "cat"), new Pair(2, "dog"), new Pair(3, "bird"));
+        var pairs = Arrays.asList(
+                new Pair(3, "cat"),
+                new Pair(2, "dog"),
+                new Pair(3, "bird")
+        );
         var actual = quickSort.quickSort(pairs);
 
-        var expected = List.of(new Pair(2, "dog"), new Pair(3, "bird"), new Pair(3, "cat"));
+        Assertions.assertEquals(2, actual.get(0).getKey());
+        Assertions.assertEquals(3, actual.get(1).getKey());
+        Assertions.assertEquals(3, actual.get(2).getKey());
+    }
 
-        Assertions.assertEquals(expected, actual);
+    @Test
+    public void quickSortTest_1() {
+        var pairs = Arrays.asList(
+                new Pair(5, "apple"),
+                new Pair(9, "banana"),
+                new Pair(9, "cherry"),
+                new Pair(1, "date"),
+                new Pair(9, "elderberry")
+        );
+        var actual = quickSort.quickSort(pairs);
+
+        Assertions.assertEquals(1, actual.get(0).getKey());
+        Assertions.assertEquals(5, actual.get(1).getKey());
+        Assertions.assertEquals(9, actual.get(2).getKey());
+        Assertions.assertEquals(9, actual.get(3).getKey());
+        Assertions.assertEquals(9, actual.get(4).getKey());
     }
 }
